<?xml version="1.0"?>
<package format="3">
  <name>pavo_ros</name>
  <version>2.0.5</version>
  <description>Pavo ROS2 driver</description>

  <maintainer email="zhoujun@siminics.com">zhoujun</maintainer>
  <license>BSD</license>

  <url type="website">http://www.siminics.com</url>
  <author email="zhoujun@siminics.com">zhoujun</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <exec_depend>Boost</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

